--- a/Medical_Records/templates/index.html
+++ b/Medical_Records/templates/index.html
@@ -11,11 +11,12 @@
 
     <h2>{{ dates[0] }} - {{ dates[1] }}</h2>
     <h2><a href="">Registos</a></h2>
-
-    <h3><a href=""></a>QueryB</h3>
-    <h3><a href=""></a>QueryC</h3>
-    <h3><a href=""></a>QueryD</h3>
-    <h3><a href=""></a>QueryE</h3>
-    <h3><a href=""></a>QueryF</h3>
+    
+    <h3><a href=""></a>Distribuição por género em cada ano e no total</h3>
+    <h3><a href=""></a>Distribuição por modalidade em cada ano e no total</h3>
+    <h3><a href=""></a>Distribuição por idade e género </h3>
+    <h3><a href=""></a>Percentagem de aptos e não aptos por ano</h3>
+    <h3><a href=""></a>Distribuição por morada</h3>
+    <h3><a href=""></a>Distribuição por estatuto de federado em cada ano</h3>
 </body>
 </html>
