--- a/Medical_Records/scripts/templates/index.html
+++ b/Medical_Records/scripts/templates/index.html
@@ -12,11 +12,11 @@
     <h2>{{ dates[0] }} - {{ dates[1] }}</h2>
     <h2><a href="">Registos</a></h2>
     
-    <h3><a href=""></a>Distribuição por género em cada ano e no total</h3>
-    <h3><a href=""></a>Distribuição por modalidade em cada ano e no total</h3>
-    <h3><a href=""></a>Distribuição por idade e género </h3>
-    <h3><a href=""></a>Percentagem de aptos e não aptos por ano</h3>
-    <h3><a href=""></a>Distribuição por morada</h3>
-    <h3><a href=""></a>Distribuição por estatuto de federado em cada ano</h3>
+    <h3><a href="output/queryb.html"></a>Distribuição por género em cada ano e no total</h3>
+    <h3><a href="output/queryc.html"></a>Distribuição por modalidade em cada ano e no total</h3>
+    <h3><a href="output/queryd.html"></a>Distribuição por idade e género </h3>
+    <h3><a href="output/querye.html"></a>Percentagem de aptos e não aptos por ano</h3>
+    <h3><a href="output/queryf.html"></a>Distribuição por morada</h3>
+    <h3><a href="output/queryg.html"></a>Distribuição por estatuto de federado em cada ano</h3>
 </body>
 </html>
