--- a/Medical_Records/scripts/templates/index.html
+++ b/Medical_Records/scripts/templates/index.html
@@ -10,13 +10,13 @@
     <h1>Exames Médicos Desportivos</h1>
 
     <h2>{{ dates[0] }} - {{ dates[1] }}</h2>
-    <h2><a href="">Registos</a></h2>
+    <h2><a href="records.html">Registos</a></h2>
     
-    <h3><a href="output/queryb.html"></a>Distribuição por género em cada ano e no total</h3>
-    <h3><a href="output/queryc.html"></a>Distribuição por modalidade em cada ano e no total</h3>
-    <h3><a href="output/queryd.html"></a>Distribuição por idade e género </h3>
-    <h3><a href="output/querye.html"></a>Percentagem de aptos e não aptos por ano</h3>
-    <h3><a href="output/queryf.html"></a>Distribuição por morada</h3>
-    <h3><a href="output/queryg.html"></a>Distribuição por estatuto de federado em cada ano</h3>
+    <h3><a href="queryb.html">Distribuição por género em cada ano e no total</a></h3>
+    <h3><a href="queryc.html">Distribuição por modalidade em cada ano e no total</a></h3>
+    <h3><a href="queryd.html">Distribuição por idade e género</a></h3>
+    <h3><a href="querye.html">Percentagem de aptos e não aptos por ano</a></h3>
+    <h3><a href="queryf.html">Distribuição por morada</a></h3>
+    <h3><a href="queryg.html">Distribuição por estatuto de federado em cada ano</a></h3>
 </body>
 </html>
