--- a/Medical_Records/scripts/templates/index.html
+++ b/Medical_Records/scripts/templates/index.html
@@ -15,8 +15,8 @@
     <h3><a href="queryb.html">Distribuição por género em cada ano e no total</a></h3>
     <h3><a href="queryc.html">Distribuição por modalidade em cada ano e no total</a></h3>
     <h3><a href="queryd.html">Distribuição por idade e género</a></h3>
-    <h3><a href="querye.html">Percentagem de aptos e não aptos por ano</a></h3>
-    <h3><a href="queryf.html">Distribuição por morada</a></h3>
-    <h3><a href="queryg.html">Distribuição por estatuto de federado em cada ano</a></h3>
+    <h3><a href="querye.html">Distribuição por morada</a></h3>
+    <h3><a href="queryf.html">Distribuição por estatuto de federado em cada ano</a></h3>
+    <h3><a href="queryg.html">Percentagem de aptos e não aptos por ano</a></h3>
 </body>
 </html>
