--- a/Medical_Records/scripts/templates/query.html
+++ b/Medical_Records/scripts/templates/query.html
@@ -9,7 +9,15 @@
 <body>
     <h1>Exames Médicos Desportivos</h1>
 
+    {% if query == 'b' -%}
+    <h2>Distribuição por género em cada ano e no total</h2>
+    {% elif query == 'c' -%}
     <h2>Distribuição por modalidade em cada ano e no total</h2>
+    {% elif query == 'f' -%}
+    <h2>Distribuição por estatuto de federado em cada ano</h2>
+    {% elif query == 'g' -%}
+    <h2>Percentagem de aptos e não aptos por ano</h2>
+    {% endif -%}
 
     {% for year in years -%}
     <h3><a href="query{{ query }}{{ year }}.html">{{ year }}</a></h3>
@@ -17,13 +25,13 @@
 
     <h2>TOTAL</h2>
 
-    {% for sport, records in total.items() -%}
-    <h3>{{ sport }}</h3>
-    <ul>
-        {% for r in records-%}
-        <li><a href="records.html#{{ query }}{{ r.id }}">{{ r.firstname }} {{ r.lastname }}</a></li>
-        {% endfor -%}
-    </ul>
+    {% for item, records in total.items() -%}
+    <h3>{{ item }}: {{ records|length }}</h3>
+        <ul>
+            {% for r in records-%}
+            <li><a href="records.html#{{ r.id }}">{{ r.firstname }} {{ r.lastname }}</a></li>
+            {% endfor -%}
+        </ul>
     {% endfor -%}
 </body>
 </html>
