Add graphs to query D

--- a/Medical_Records/scripts/templates/queryd.html
+++ b/Medical_Records/scripts/templates/queryd.html
@@ -11,6 +11,10 @@
 
     <h2>Distribuição por idade e género</h2>
 
+    <img src="resources/gender.png" alt="Genders">
+    <img src="resources/age.png" alt="Ages">
+    <img src="resources/age_gender.png" alt="Ages per Gender">
+
     <h3>Mulheres abaixo de 35 anos: {{ dist[0][0]|length }}</h3>
         <ul>
             {% for r in dist[0][0] -%}
