--- a/Medical_Records/scripts/templates/subquery.html
+++ b/Medical_Records/scripts/templates/subquery.html
@@ -22,7 +22,7 @@
     <img src="resources/plot{{ query }}{{ year }}.png" alt="">
 
     {% for i, records in item.items() -%}
-    <h3>{{ i }}: {{ records|length }} - {{ (records|length / size * 100)|round(2) }}</h3>
+    <h3>{{ i }}: {{ records|length }} - {{ (records|length / size * 100)|round(2) }}%</h3>
         <ul>
             {% for r in records-%}
             <li><a href="records.html#{{ r.id }}">{{ r.firstname }} {{ r.lastname }}</a></li>
